delete redundant line

--- a/tensile.ipynb
+++ b/tensile.ipynb
@@ -26,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "815112e9-2a4a-4430-8aec-73c3df5a3c5e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2"
+       "<matplotlib.legend.Legend at 0x125f2fd00>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -54,8 +54,7 @@
    "source": [
     "for name, tbl in data:\n",
     "    plt.plot(tbl[\"dL(mm)\"],tbl[\"F(Kn)\"],label=name)\n",
-    "plt.legend()\n",
-    "plt.figaspect(2/10)\n"
+    "plt.legend()"
    ]
   },
   {
